<resources>
    <string name="app_name">Healthy Eats</string>
    <string name="yield">yield </string>
    <string name="quantity">quantity </string>
    <string name="profile_name">Profile</string>
    <string name="register_name">Register</string>
    <string name="food_info">Food Info</string>
    <string name="intro_eat">What did you eat today?</string>
    <string name="back">back</string>
    <string name="height">Current Height</string>
    <string name="curweight">Current Weight</string>
    <string name="daily_exercise">Daily Exercise</string>
    <string name="pounds">lbs</string>
    <string name="inch">in</string>
    <string name="cal_day">cal/d</string>
    <string name="next_step">Next Step</string>
    <string name="age">Age</string>
    <string name="year">years</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="camera">camera</string>
    <string name="find">find</string>
    <string name="size">Size</string>
    <string name="today">Today</string>
    <string name="done">done</string>
    <string name="user">Your Name</string>
    <string name="serve">Serving Size</string>
    <string name="numver_serve">Number of Servings</string>
    <string name="login">Login</string>

    <string name = "calory_num"> 1677  -  894  =   1018 </string>
    <string name="goal">Goal  -  total food  =  Net</string>
    <string-array name="food_array">
        <item>Rice</item>
        <item>Milk</item>
        <item>Apple</item>
        <item>Orange</item>
    </string-array>

    <string name="gender">gender</string>

    <string-array name="gender_list">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="country_prompt">Size</string>

    <string-array name="country_arrays">
        <item>Size</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">The email or password is wrong.Please try again.</string>

</resources>
