<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"

        android:text="FoodName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/numver_serve"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/yield"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:text="@string/yield" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="part"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/quantity"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/yield"
                android:inputType="numberDecimal"
                android:text="@string/yield" />
            <TextView
                android:id="@+id/measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="unit"
                android:textSize="15sp"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>