<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:layout_editor_absoluteY="25dp"
    tools:context="com.example.tanxueying.healthyeats.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/input_bar"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile_btn"
        android:layout_width="80dp"
        android:layout_height="60dp"

        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"

        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/today_txt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"

        android:background="@android:color/white"
        android:paddingVertical="10dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/input_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_bar" />

    <TextView
        android:id="@+id/data_view"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginBottom="31dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text="TextView"
        android:textSize="1sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_txt"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/goal_name"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:gravity="center_vertical"
        android:text="@string/goal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/data_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/left"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Left Calories:"

        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/data_view"
        app:layout_constraintTop_toTopOf="@+id/data_view" />

    <TextView
        android:id="@+id/goal_num"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"

        android:layout_marginTop="8dp"
        android:ems="10"
        android:selectAllOnFocus="false"

        android:singleLine="false"


        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@android:color/black"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/goal_name"
        app:layout_constraintEnd_toEndOf="@+id/data_view"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="@+id/data_view"
        app:layout_constraintTop_toTopOf="@+id/data_view"
        app:layout_constraintVertical_bias="0.508" />

    <ListView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        android:scrollbarStyle="outsideOverlay"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:text="@string/intro_eat"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/today_txt" />


    <ImageButton
        android:id="@+id/add_btn"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="11dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/today_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/today_txt" />

    <ImageButton
        android:id="@+id/log_out2"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log_out" />



</android.support.constraint.ConstraintLayout>